# pydetach

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo.ipynb
pydetach/: __init__.py  __main__.py  classifier.py  data.py  recipe.py  spatial.py  types.py  utils.py
